--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,14 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+a {
+  text-align: center;
+  background-color: #282c34;
+  color: #fff;
 }
